ThrowIfNull test pass now